-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
None
-
3
-
9223372036854775807
I hit this issue when I am working on the patch of LU-13720, in sanity.sh test_211.
If bs=4k (probably multiple of 4K), md5 chksum always fails on the mirror file created by dd after doing mirror resync and delete.
It can be easily reproduced by the following scripts:
# dd if=/dev/zero of=/mnt/lustre/abc bs=4k count=10 oflag=direct # lfs mirror extend -N /mnt/lustre/abc # dd if=/dev/zero of=/mnt/lustre/abc bs=4k count=1 oflag=direct # md5sum /mnt/lustre/abc 620f0b67a91f7f74151bc5be745b7110 /mnt/lustre/abc # lfs mirror resync /mnt/lustre/abc # lfs mirror delete --mirror-id=1 /mnt/lustre/abc # md5sum /mnt/lustre/abc ab893875d697a3145af5eed5309bee26 /mnt/lustre/abc
Md5 check can pass if bs is set to other than multiple of 4k, e.g. 1k.