LU-18468 llapi: always truncate mirrors on resync

When mirrors are synced, all mirrors should be truncated to
match the size of the source/primary mirror.  This was
skipped if the size was unaligned, but that is a mistake.

Test-Parameters: testlist=sanity-flr,sanity-flr,sanity-flr
Test-Parameters: testlist=sanity-pfl,sanity-pfl,sanity-pfl
Signed-off-by: Patrick Farrell <pfarrell@whamcloud.com>
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I767a1b3ef58c855f57967228d37b04fa0ab87e57
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/57090
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Zhenyu Xu <bobijam@hotmail.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>